<resources>
    <string name="app_name">Blog Board</string>
    <string name="logo_welcome">welcome logo image.</string>
    <string name="enter_password">Enter password here</string>
    <string name="enter_your_email">Enter your email here</string>
    <string name="need_account_sign_up">Need account? Sign up</string>
    <string name="login_to_account">Login to Account</string>
    <string name="action_settings">Account Settings</string>
    <string name="action_logout">Logout</string>
    <string name="already_have_an_account_go_to_login">Already have an Account? Go to Login</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password_correct">Confirm Password</string>
    <string name="title_account_settings">Account Settings</string>
    <string name="profile_image">profile image</string>
    <string name="save_account_settings">Save Account Settings</string>
    <string name="your_name">Your Name</string>
    <string name="post_description">What\'s happening... </string>
    <string name="post_image_into_the_feed">post image into the feed</string>
    <string name="post_button">Publish</string>
    <string name="image_to_be_posted">image to be posted</string>
    <string name="click_to_add_image">click to add image.</string>
    <string name="click_button_to_add_image"><![CDATA[Click To Add Image ->]]></string>
    <string name="add_new_post_header">Post Something</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_author_name">Deepak</string>
    <string name="date_of_post">yesterday</string>
    <string name="post_image_view_holder">post image view holder</string>
    <string name="random_post_desc_text">roses are #ff0000 violets are #0000ff ladies and gentleman hex code for u, said the hex codes.</string>
    <string name="post_title_text_view">Post Title</string>
    <string name="post_title_text">Post Title here...</string>
    <string name="like_button">like button</string>
    <string name="_0_likes">0</string>
    <string name="likes"> likes</string>
    <string name="splash_logo_image">Splash Logo Image</string>
    <string name="welcome_to">Welcome to</string>
    <string name="search">Search Topic</string>
    <string name="search_here">Search here</string>
    <string name="comments"> comments</string>
    <string name="say_something_nice">Say Something Nice</string>
    <string name="send_button">send button</string>
    <string name="loading_comment">Loading Comment...</string>
    <string name="delete">Delete</string>
    <string name="bio">no bio yet</string>
    <string name="user_name">User Name</string>
    <string name="edit_account_settings">edit account settings</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="user_email_com">user@email.com</string>
    <string name="drawer_close_button">drawer close button</string>
    <string name="edit_button">edit button</string>
    <string name="user_image">user image</string>
    <string name="delete_post">Sure you want to delete this post?</string>
    <string name="send_feedback">Send</string>
    <string name="feedback_here">Feedback here</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="app_version">App Version</string>
    <string name="developed_by">Developed By</string>
    <string name="deepak_saini">Deepak Saini</string>
    <string name="show_all_users">People</string>
    <string name="say_something">say something</string>
    <string name="chat_text">Chat</string>
</resources>
