<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <group
        android:checkableBehavior="none">

        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/action_view_all_users"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/show_all_users" />
        <item
            android:id="@+id/action_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/feedback"/>

        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about" />

    </group>

</menu>