<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        app:showAsAction="always"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/action_search"
        app:showAsAction="always"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@android:string/search_go" />
    <item
        android:id="@+id/action_notification"
        app:showAsAction="always"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifications" />
    <item
        app:showAsAction="always"
        android:id="@+id/bottom_action_account"
        android:icon="@drawable/ic_account_24dp"
        android:title="@string/title_account_settings" />
</menu>