<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="match_parent"
        android:layout_height="221dp"
        android:contentDescription="@string/logo_welcome"
        app:srcCompat="@drawable/logo_create_account" />

    <EditText
        android:id="@+id/registry_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/logoView"
        android:hint="@string/enter_your_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/registry_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/registry_email"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/registry_password"
        android:hint="@string/confirm_password_correct"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_password"
        android:background="@color/colorAccent"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/login_to_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="16dp"
        android:text="@string/already_have_an_account_go_to_login"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorAccent" />

    <ProgressBar
        android:id="@+id/registration_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:foregroundGravity="top"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_account"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="119dp"
        android:indeterminate="true"
        android:padding="20dp"
        android:visibility="invisible" />

</RelativeLayout>